# open-trainaa

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  dev.sh  mkdocs.yml  version.config.json
src/backend/: .dockerignore  .env.example  Dockerfile  GARMIN_SYNC_FIXES.md  README.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  logging_config.yaml  pyproject.toml  sessions.py  traefik.yml
src/backend/agent/: feedback_agent.py  log.py  main_agent.py  personas.py  query_agent.py  system_prompts.py  trainer_agent.py  utils.py  workout_management_agent.py
src/backend/agent/core/: __init__.py  error_handler.py  singletons.py
src/backend/agent/security/: __init__.py  input_validator.py
src/backend/agent/tools/: context_tools.py  testtools.py  tools.py
src/backend/api/: auth.py  database.py  log.py  main.py  redis.py  training_status.py  version.py
src/backend/api/analytics/: cp_model.py  hr_curve.py  power_curve.py  vdot.py
src/backend/api/models/: sport_types.py
src/backend/api/providers/: __init__.py  base.py  garmin.py  wahoo.py
src/backend/api/routers/: __init__.py  activities.py  ai_tools.py  analytics.py  chat.py  invitation_codes.py  push_tokens.py  race_events.py  revenuecat_webhook.py  stripe_billing.py  subscriptions.py  training_status.py  user_feedback.py  user_infos.py  workouts.py
src/backend/api/routers/garmin/: __init__.py  api.py  auth.py  helpers.py  webhook.py
src/backend/api/routers/strava/: __init__.py  api.py  auth.py  helpers.py
src/backend/api/routers/wahoo/: __init__.py  api.py  auth.py  helpers.py  webhook.py
src/backend/api/services/: __init__.py  push_notifications.py  rate_limiter.py  workout_sync.py
src/backend/api/tasks/: __init__.py
src/backend/api/tests/: test_workout_calculation.py
src/backend/api/utils/: __init__.py  chat_history.py  consent.py  encryption.py  fit_file_utils.py  fit_value_validator.py  general.py  subscription_limits.py
src/backend/api/workers/: __init__.py  workout_sync_worker.py
src/backend/pacer/: FIT_CONVERTER_USAGE.md  GARMIN_CONVERTER_FIX.md  GARMIN_PERCENTAGE_FIX.md  GARMIN_SYNC_SETUP.md  README.md  pyproject.toml
src/backend/pacer/backup/: workout_converter.py
src/backend/pacer/src/: __init__.py  garmin_workout_converter.py  garmin_workout_definition.py  txt_workout_converter.py  txt_workout_definition.py  txt_workout_validator.py  wahoo_workout_definition.py  wahoo_workout_validator.py
src/backend/pacer/tests/: test_garmin_converter.py  test_workout_converter.py  test_workout_validator.py
src/backend/pacer/tests/testfiles/invalid/: empty_workout_name.txt  invalid_duration.txt  invalid_intensity.txt  invalid_step_format.txt  invalid_swimming_pace.txt  invalid_workout_type.txt  missing_empty_line.txt  missing_parts.txt  no_content.txt  test_invalid_badline.txt  test_workout_invalid.txt  too_few_lines.txt
src/backend/pacer/tests/testfiles/valid/: cycling_power.txt  cycling_sweet_spot.txt  extended_time_format.txt  running_heart_rate.txt  running_speed.txt  swimming_distance.txt  test_comments.txt  test_long_duration.txt  test_strength.txt  test_swimming.txt  test_workout_valid.txt  test_workout_zones.txt  test_yoga.txt
src/backend/python_fit_tool_jnkue/: README.md  README_FIT_TOOL.md  setup.py
src/backend/python_fit_tool_jnkue/examples/: write_workout_example.py
src/backend/python_fit_tool_jnkue/fit_tool/: field.py  fit_file.py  fit_file_header.py  sub_field.py
src/backend/python_fit_tool_jnkue/fit_tool/profile/messages/: accelerometer_data_message.py  activity_message.py  ant_channel_id_message.py  ant_rx_message.py  ant_tx_message.py  aviation_attitude_message.py  barometer_data_message.py  bike_profile_message.py  blood_pressure_message.py  cadence_zone_message.py  camera_event_message.py  capabilities_message.py  climb_pro_message.py  common_fields.py  connectivity_message.py  course_message.py  course_point_message.py  developer_data_id_message.py  device_info_message.py  device_settings_message.py  dive_alarm_message.py  dive_gas_message.py  dive_settings_message.py  dive_summary_message.py  event_message.py  exd_data_concept_configuration_message.py  exd_data_field_configuration_message.py  exd_screen_configuration_message.py  exercise_title_message.py  field_capabilities_message.py  goal_message.py  (+58 more)
src/backend/python_fit_tool_jnkue/fit_tool/tests/: test_profile.py
src/backend/scripts/: backfill_analytics.py  recalculate_all_users.py  test_automatic_calulations.py  wahooplan.py
src/backend/tests/: conftest.py  test_cp_model.py  test_hr_curve.py  test_power_curve.py  test_race_events.py  test_upload_json.py  test_vdot.py
(+371 files in other folders)
